@@ -20,8 +20,8 @@ function bookmark_add ($bookmark_url, $bookmark_title="") {
 		$bookmark_title = $bookmark_url;
 	}
 	$result = db_query("INSERT into user_bookmarks (user_id, bookmark_url, "
-		. "bookmark_title) values ('".user_getid()."', '$bookmark_url', "
-		. "'$bookmark_title');");
+		. "bookmark_title) values ('".user_getid()."', '".htmlentities($bookmark_url)."', "
+		. "'".htmlspecialchars($bookmark_title)."');");
 	if (!$result) {
 		echo db_error();
 	}
@@ -35,8 +35,8 @@ function bookmark_add ($bookmark_url, $bookmark_title="") {
  * @param		string	The new or existing bookmark title
  */
 function bookmark_edit ($bookmark_id, $bookmark_url, $bookmark_title) {
-	db_query("UPDATE user_bookmarks SET bookmark_url='$bookmark_url', "
-		."bookmark_title='$bookmark_title' where bookmark_id='$bookmark_id' AND user_id='". user_getid() ."'");
+	db_query("UPDATE user_bookmarks SET bookmark_url='".htmlentities($bookmark_url)."', "
+		."bookmark_title='".htmlspecialchars($bookmark_title)."' where bookmark_id='$bookmark_id' AND user_id='". user_getid() ."'");
 }
 
 /**
