@@ -1,6 +1,11 @@
+2003-01-08  Ryan T. Sammartino  <ryants@shaw.ca>
+
+	* www/include/bookmarks.php: Audit: escape special characters from
+	user input before submitting to database.
+
 2003-01-07 Tom Copeland <tom@infoether.com>
 
-	* Added "submitted by" info to the task detail view.  Modified project_task_vw 
+	* Added "submitted by" info to the task detail view.  Modified project_task_vw
 	to include user name and realname from user table.
 
 2003-01-06  Richard Offer
